# django-starter

./: .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  docker-compose.yml  package.json  pyproject.toml  pytest.ini  requirements.txt  tailwind.config.js  webpack.config.js
assets/: alphine.js  app.js
assets/controllers/app/: hello_controller.js
assets/static/: app.css  app.js  entrypoints.json  manifest.json
assets/templatetags/: encore.py  stimulus.py
core/: asgi.py  urls.py  wsgi.py
core/settings/: base.py  development.py  production.py  test.py
templates/: hello.html  layout.html
users/migrations/: 0001_initial.py
